updated-week02-holygrail.html

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -17,5 +17,23 @@
                 <li><a href="http://lds.org">The Church of Jesus Christ</a></li>
             </ul>
         </nav>
+        <main>
+            <section>
+                <article>
+                    <h2>Article 1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, omnis?</p>
+                </article>
+                <article>
+                    <h2>Article 2</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, earum.</p>
+                </article>
+            </section>
+        </main>
+        <aside>
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/ogden-utah/1200x1200/ogden-utah-temple-1305069-wallpaper.jpg" alt="Ogden Utah Temple" width="200">
+        </aside>
+        <footer>
+            ©️2024 | Caleb Beardall | Ogden, UT
+        </footer>
     </body>
 </html>
