--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -23,6 +23,8 @@
                     <h2>Article 1</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, omnis?</p>
                 </article>
+            </section>
+            <section>
                 <article>
                     <h2>Article 2</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, earum.</p>
