--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta charset="utf-8">
         <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
         <title>Caleb Beardall | WDD 130</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
             <nav>
                 <a href="#">Home</a>
-                <a href="wwr/">Rafting Website</a>
-                <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="wwr/">White Water Rafting Website</a>
+                <a href="wwr/site-plan-rafting.html">White Water Rafting Site Plan</a>
             </nav>
         </header>
         <main>
