w02-enhancing-your-course-home-page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
         <title>Caleb Beardall | WDD 130</title>
+        <meta name="description" content="This page functions as an introduction to myself, Caleb Beardall, for my WDD 130: Web Fundamentals programming class.">
+        <meta name="author" content="Caleb Beardall">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -19,6 +21,11 @@
             <img src="images/profile.webp" alt="Hello, my name is Caleb Beardall." width="200">
             <p>Hello! My name is Caleb Beardall. I grew up in Kaysville, UT, served my mission in Tacoma, WA (2017-2019), and live in North Ogden UT. I've been married for 4 years and my wife's name is Drew; she's from Pinetop-Lakeside, AZ. I currently work for a fright brokerage as their claims manager which is a similar role to an insurance adjuster/underwriter. I've worked at said fright brokerage for about 5 years. While I've enjoyed my time there, I'm returning to school in hopes of finding more enjoyable employment opportunities in software development.</p>
         </main>
+        <aside>
+            <h2>Utah</h2>
+            <img src="images/pineview-reservoir.webp" alt="Pineview Reservoir in Eden, Utah.">
+            <p>Utah is located on the western side of the United States. Its name was derived from the Ute Indians who inhabited the land. Utah received its statehood in 1896 as the 45th state but was settled by Brigham Young in 1847 by the first group of Mormon Pioneer who were fleeing religious persecution in the state of Illinois. To this day, over half of the population of the state identifies as being members of the Church of Jesus Christ of Latter-day Saints. The state is also often referred to as the 'Beehive State'. This symbol references the state's perseverance and industry.</p>
+        </aside>
         <footer>
             <p>©️2024 | Caleb Beardall | Ogden, UT</p>
         </footer>
