w03-enhancing-your-course-page

--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
                 <a href="#">Home</a>
                 <a href="wwr/">White Water Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">White Water Rafting Site Plan</a>
+                <a href="https://linkedin.com">Linkedin</a>
+                <a href="https://facebook.com">Facebook</a>
             </nav>
         </header>
         <main>
             <h1>Caleb Beardall | WDD 130</h1>
             <img src="images/profile.webp" alt="Hello, my name is Caleb Beardall." width="200">
-            <p>Hello! My name is Caleb Beardall. I grew up in Kaysville, UT, served my mission in Tacoma, WA (2017-2019), and live in North Ogden UT. I've been married for 4 years and my wife's name is Drew; she's from Pinetop-Lakeside, AZ. I currently work for a fright brokerage as their claims manager which is a similar role to an insurance adjuster/underwriter. I've worked at said fright brokerage for about 5 years. While I've enjoyed my time there, I'm returning to school in hopes of finding more enjoyable employment opportunities in software development.</p>
+            <p>Hello! My name is Caleb Beardall. I grew up in Kaysville, UT, served my mission in Tacoma, WA (2017-2019), and live in North Ogden UT. I've been married for 4 years and my wife's name is Drew; she's from Pinetop-Lakeside, AZ. I currently work for a fright brokerage as their claims manager which is a similar role to an insurance adjuster/underwriter. I've worked at said fright brokerage for about 5 years. While I've enjoyed my time there, I'm returning to school in hopes of finding more enjoyable employment opportunities in software development. I currently work for a freight brokerage as a Claims Manager which has proven to be a very demanding and stressful position.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/ogden-utah-temple?lang=eng" target="_blank">Ogden Utah Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake City Utah Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/bountiful-utah-temple?lang=eng" target="_blank">Bountiful Utah Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Utah</h2>
             <img src="images/pineview-reservoir.webp" alt="Pineview Reservoir in Eden, Utah.">
             <p>Utah is located on the western side of the United States. Its name was derived from the Ute Indians who inhabited the land. Utah received its statehood in 1896 as the 45th state but was settled by Brigham Young in 1847 by the first group of Mormon Pioneer who were fleeing religious persecution in the state of Illinois. To this day, over half of the population of the state identifies as being members of the Church of Jesus Christ of Latter-day Saints. The state is also often referred to as the 'Beehive State'. This symbol references the state's perseverance and industry.</p>
@@ -30,4 +37,5 @@
             <p>©️2024 | Caleb Beardall | Ogden, UT</p>
         </footer>
     </body>
+    <!--3/16/2024-->
 </html>
