--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
-    <header>
-        <img src="images/mountain-name-rafting.png" alt="Ogden Rafting Company Logo">
-        <nav>
+    <header class="grid">
+        <img class="logo" src="images/mountain-name-rafting.png" alt="Ogden Rafting Company Logo">
+        <nav class="links">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
@@ -27,21 +27,38 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, laboriosam. Natus earum expedita culpa incidunt beatae quam reprehenderit iusto repellendus facilis ipsum. Molestias, voluptatibus nobis.</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum distinctio et facilis laboriosam obcaecati aspernatur excepturi, quas, repudiandae vero soluta eveniet vitae mollitia, possimus provident.</p>
+            <p class="beginning">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum distinctio et facilis laboriosam obcaecati aspernatur excepturi, quas, repudiandae vero soluta eveniet vitae mollitia, possimus provident.</p>
+            <img class="logo2" src="images/mountain-name-rafting.png" alt="Ogden Rafting Company Logo">
+            <p class="current">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum distinctio et facilis laboriosam obcaecati aspernatur excepturi, quas, repudiandae vero soluta eveniet vitae mollitia, possimus provident.</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/1-rafting-image.jpg" alt="A group white water rafting.">
-            <img src="images/2-rafting-image.jpg" alt="A wide river.">
-            <img src="images/3-rafting-image.jpg" alt="A group white water rafting.">
-            <img src="images/4-rafting-image.jpg" alt="A narrow river.">
-            <img src="images/5-rafting-image.jpg" alt="A group white water rafting.">
-        </section>
+            <figure class="figure1">
+                <img class="image1" src="images/1-rafting-image.jpg" alt="A group white water rafting.">
+                <figcaption class="caption1">Cataract Canyon</figcaption>
+            </figure>
+            <figure class="figure2">
+                <img class="image2" src="images/2-rafting-image.jpg" alt="A wide river.">
+                <figcaption class="caption2">Westwater Canyon</figcaption>
+            </figure>
+            <figure class="figure3"> 
+                <img class="image3" src="images/3-rafting-image.jpg" alt="A group white water rafting."> 
+                <figcaption class="caption3">San Juan River</figcaption>  
+            </figure>
+            <figure class="figure4">
+                <img class="image4" src="images/4-rafting-image.jpg" alt="A narrow river.">
+                <figcaption class="caption4">Green River</figcaption>
+            </figure>
+            <figure class="figure5">    
+                <img class="image5" src="images/5-rafting-image.jpg" alt="A group white water rafting.">
+                <figcaption class="caption">Escalante River</figcaption>
+            </figure>
+            </section>
     </main>
     <footer>
-        <p>©️2024 | Ogden Rafting Company | Caleb Beardall</p>
+        <p class="copyright">©️2024 | Ogden Rafting Company | Caleb Beardall</p>
         <nav class="sociallinks">
             <a href="htps://https://www.facebook.com/">
                 <img src="images/facebook.webp" alt="Facebook">
