--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>About Us Ogden Rafting Company</title>
     <meta name="description" content="A brief history of our organization, essential contact information, and other promotions.">
     <meta name="author" content="Caleb Beardall">
     <link rel="stylesheet" href="styles/rafting.css">
