--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,15 +26,15 @@
             <fieldset>
                 <legend>Questions</legend>
                 <div class="form-item column1">
-                <label for="browser">What is your favorite internet browser?</label>
-                    <select id="browser" name="browser">
-                        <option value="chrome">Chrome</option>
-                        <option value="firefox">Firefox</option>
-                        <option value="safari">Safari</option>
-                        <option value="edge">Edge</option>
-                        <option value="brave">Brave</option>
-                        <option value="other">Other</option>
-                    </select>
+                    <label for="browser">What is your favorite internet browser?</label>
+                        <select id="browser" name="browser">
+                            <option value="chrome">Chrome</option>
+                            <option value="firefox">Firefox</option>
+                            <option value="safari">Safari</option>
+                            <option value="edge">Edge</option>
+                            <option value="brave">Brave</option>
+                            <option value="other">Other</option>
+                        </select>
                 </div>
                 <div class="form-item column1">
                     <label for="pet">Do you have a household pet?</label>
