--- a/quiz.html
+++ b/quiz.html
@@ -16,7 +16,7 @@
         <form>
                 <div>
                     <label for="q1">1. What does the acronym CSS stand for?</label>
-                    <input type="text" id="q1" name="a1">
+                    <input type="text" id="q1" name="q1">
                 </div>
                 <div>
                     <label for="q2">2. How are id and class attributes selected in CSS?</label>
