--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -52,38 +52,44 @@
             </figure>
         </div>
         <form class="form">
-            <fieldset class="contact">
+            <fieldset>
                 <legend>Contact Information</legend>
-                <div class="form-item column2">
+                <div class="form-item contact">
                     <label for="name">What's your name?</label>
                     <input type="text" id="name" name="name">
                 </div>
-                <div class="form-item column2">
+                <div class="form-item contact">
                     <label for="email">What's your email address?</label>
                     <input type="text" id="email" name="email">
                 </div>
             </fieldset>
-            <fieldset class="questions">
+            <fieldset>
                 <legend>Questions</legend>
-                <div class="form-item column1">
+                <div class="form-item questions">
                     <p>What is the purpose of your message?</p>
-                    <input type="radio" id="general" name="general_inquiry" value="general">
-                    <label for="general">General Inquiry</label><br>
-                    <input type="radio" id="reservation" name="reservation_question" value="reservation">
-                    <label for="reservation">Reservation Question</label><br>
-                    <input type="radio" id="suggestion" name="website_suggestion" value="suggestion">
-                    <label for="suggestion">Website Suggestion</label>
+                    <div>
+                        <input type="radio" id="general" name="general_inquiry" value="general">
+                        <label for="general">General Inquiry</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="reservation" name="reservation_question" value="reservation">
+                        <label for="reservation">Reservation Question</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="suggestion" name="website_suggestion" value="suggestion">
+                        <label for="suggestion">Website Suggestion</label>
+                    </div>
                 </div>
-                <div class="form-item column1">
+                <div class="form-item questions">
                     <label for="message">What can we do for you?</label>
                     <textarea id="message" name="message" rows="4" placeholder="Let us know what we can do for you."></textarea>
                 </div>
-                <div class="form-item">
+                <div class="form-item subscribe">
                     <label for="subscribe">Please subscribe me to the monthly newsletter!</label>
-                    <input type="checkbox" id="subscribe" name="subscribe">
+                    <input type="checkbox" id="subscribe" name="subscribe"/>
                 </div>
             </fieldset>
-            <button type="submit">Submit Poll</button>
+            <button class="send-request" type="submit">Send Request</button>
         </form>
 
     </main>
