--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -37,7 +37,7 @@
             </div>
         </section>
         <div class="team">
-            <h2>Meet our team!</h2>
+            <h1>Meet our team!</h1>
             <figure class="figure1">
                 <img class="image1" src="images/1-guide.jpg" alt="Peter Senior Guide">
                 <figcaption class="caption1">Peter - Senior Guide</figcaption>
@@ -89,7 +89,7 @@
                     <input type="checkbox" id="subscribe" name="subscribe"/>
                 </div>
             </fieldset>
-            <button class="send-request" type="submit">Send Request</button>
+            <button class="send-request" type="send-request">Send Request</button>
         </form>
 
     </main>
