--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -86,10 +86,10 @@
                 </div>
                 <div class="form-item subscribe">
                     <label for="subscribe">Please subscribe me to the monthly newsletter!</label>
-                    <input type="checkbox" id="subscribe" name="subscribe"/>
+                    <input type="checkbox" id="subscribe" name="subscribe">
                 </div>
             </fieldset>
-            <button class="send-request" type="send-request">Send Request</button>
+            <button class="send-request" type="button">Send Request</button>
         </form>
 
     </main>
