--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -89,7 +89,7 @@
                     <input type="checkbox" id="subscribe" name="subscribe">
                 </div>
             </fieldset>
-            <button class="send-request" type="button">Send Request</button>
+            <button class="send-request" type="request">Send Request</button>
         </form>
 
     </main>
