--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -54,13 +54,15 @@
         <form class="form">
             <fieldset>
                 <legend>Contact Information</legend>
-                <div class="form-item contact">
-                    <label for="name">What's your name?</label>
-                    <input type="text" id="name" name="name">
-                </div>
-                <div class="form-item contact">
-                    <label for="email">What's your email address?</label>
-                    <input type="text" id="email" name="email">
+                <div>
+                    <div class="form-item contact">
+                        <label for="name">What's your name?</label>
+                        <input type="text" id="name" name="name">
+                    </div>
+                    <div class="form-item contact">
+                        <label for="email">What's your email address?</label>
+                        <input type="text" id="email" name="email">
+                    </div>
                 </div>
             </fieldset>
             <fieldset>
