--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -21,7 +21,7 @@
     <main>
         <section class="trips-top">
             <section>
-                <img class="trips-top-img" src="images/contact-us-hero.jpg" alt="Rafting the Ogden river.">
+                <img class="trips-top-img" src="images/contact-us-hero.jpg" alt="Rafting the Green river.">
                 <a class="contact-us-button" href="contact.html">Contact Us</a>
             </section>
             <table class="trips-top-table">
