--- a/wwr/index.html
+++ b/wwr/index.html
@@ -39,9 +39,9 @@
                 </fieldset>
             </form>
             <img class="index-middle-img" src="images/index-middle-image.webp" alt="Rafting Cataract canyon.">
-            <div class="index-middle-cta">
-                <p>*CALL TO ACTION* Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod vel nobis similique quidem veritatis. Eum numquam beatae nihil reiciendis exercitationem voluptates impedit a.</p>
-                <a href="trips.html">See Trips</a>
+            <div class="index-middle-div">
+                <p class="index-middle-p">*CALL TO ACTION* Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod vel nobis similique quidem veritatis. Eum numquam beatae nihil reiciendis exercitationem voluptates impedit a.</p>
+                <a class="index-middle-a" href="trips.html">See Trips</a>
             </div>
         </div>
     </main>
