--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -20,10 +20,10 @@
     </header>
     <main>
         <section class="trips-top">
-            <section>
+            <div>
                 <img class="trips-top-img" src="images/contact-us-hero.jpg" alt="Rafting the Green river.">
                 <a class="contact-us-button" href="contact.html">Contact Us</a>
-            </section>
+            </div>
             <table class="trips-top-table">
                 <caption>
                     Trip Location Information
