--- a/wwr/index.html
+++ b/wwr/index.html
@@ -26,7 +26,7 @@
         <div class="index-middle">
             <form>
                 <fieldset>
-                    <legend>Subscribe to our Newsletter</legend>
+                    <legend>Sign Up for Our Newsletter</legend>
                     <div class="index-middle-name">
                         <label for="name">What's your name?</label>
                         <input type="text" id="name" name="name">
@@ -35,7 +35,7 @@
                         <label for="email">What's your email address?</label>
                         <input type="text" id="email" name="email">
                     </div>
-                    <button class="send-info" type="button">Send Info</button>
+                    <button class="send-info" type="button">Sign Up</button>
                 </fieldset>
             </form>
             <img class="index-middle-img" src="images/index-middle-image.webp" alt="Rafting Cataract canyon.">
@@ -44,9 +44,29 @@
                 <a class="index-middle-a" href="trips.html">See Trips</a>
             </div>
         </div>
+        <div class="standard-info">
+            <img src="images/1-index-end-img.webp" alt="Camping in a tent.">
+            <div class="standard-info-copy">
+                <h3>Standard Package Includes</h3>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, magnam.</li>
+                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="adventure-info">
+            <div class="adventure-info-copy">
+                <h3>Adventure Package Includes</h3>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, magnam.</li>
+                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
+                </ul>
+            </div>
+            <img src="images/2-index-end-img.webp" alt="Camping in a cabin.">
+        </div>
     </main>
     <footer>
-        <a class="wireframe-trips" href="images/wireframe-trips.png">Trips Wireframe</a>
+        <a class="wireframe-index" href="images/wireframe-index.png">Index Wireframe</a>
         <p class="copyright">©️2024 | Ogden Rafting Company | Caleb Beardall</p>
         <nav class="sociallinks">
             <a href="htps://https://www.facebook.com/">
